--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaClassTemplate2.vm
@@ -13,10 +13,16 @@ public static Meta${classDeclaration.name} getInstance() {
 }
 
 #foreach($attribute in $classDeclaration.attributes)
-#if($context.generationContext.helper.isNull($attribute.precision))
-public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, 0, #if($attribute.id)true#{else}false#end, org.kevoree.modeling.api.meta.MetaType.$attribute.type.toUpperCase(), org.kevoree.modeling.api.extrapolation.DiscreteExtrapolation.instance());
+#if(${context.generationContext.getHelper().getInstance().isPrimitive(${attribute.getType()})})
+    #set($attTypeValue = "org.kevoree.modeling.api.meta.PrimitiveMetaTypes.$attribute.getType().toUpperCase()")
 #else
-public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, #if($context.generationContext.helper.isNull(${attribute.precision}))0#{else}$attribute.precision#end, #if($attribute.id)true#{else}false#end, org.kevoree.modeling.api.meta.MetaType.$attribute.type.toUpperCase(), org.kevoree.modeling.api.extrapolation.PolynomialExtrapolation.instance());
+    #set($substringIndex = ${attribute.getType().lastIndexOf('.')} + 1)
+    #set($attTypeValue = "${classDeclaration.pack}.meta.Meta${attribute.getType().substring($substringIndex)}.getInstance()")
+#end
+#if($context.generationContext.helper.isNull($attribute.precision))
+public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, 0, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.api.extrapolation.DiscreteExtrapolation.instance());
+#else
+public static final org.kevoree.modeling.api.meta.MetaAttribute ATT_${attribute.name.toUpperCase()} = new org.kevoree.modeling.api.abs.AbstractMetaAttribute("${attribute.name}", ${attribute.index}, #if($context.generationContext.helper.isNull(${attribute.precision}))0#{else}$attribute.precision#end, #if($attribute.id)true#{else}false#end, $attTypeValue, org.kevoree.modeling.api.extrapolation.PolynomialExtrapolation.instance());
 #end
 #end
 
