--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewTemplate.vm
@@ -2,7 +2,7 @@ package $context.metaModelPackage;
 
 public interface ${context.metaModelName}View extends org.kevoree.modeling.api.KView {
 
-#foreach($class in $context.model.classifiers)
+#foreach($class in $context.model.getClasses())
 #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
     public $class.fqn create$class.fqn.substring($lastIdx)();
 #end
