--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
@@ -2,8 +2,8 @@ package ${context.metaModelPackage}.impl;
 
 public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.abs.AbstractKView implements ${context.metaModelPackage}.${context.metaModelName}View {
 
-    public ${context.metaModelName}ViewImpl(long p_now, org.kevoree.modeling.api.KDimension p_dimension) {
-        super(p_now, p_dimension);
+    public ${context.metaModelName}ViewImpl(long p_now, org.kevoree.modeling.api.KUniverse p_universe) {
+        super(p_now, p_universe);
     }
 
     @Override
@@ -16,7 +16,7 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
     #set($lastIdx = $class.fqn.lastIndexOf(".")+1)
             case ${class.index} : return new ${class.fqn.substring(0,$class.fqn.lastIndexOf("."))}.impl.${class.fqn.substring($lastIdx)}Impl(this, p_key, p_timeTree, p_clazz);
 #end
-            default : return new org.kevoree.modeling.api.abs.DynamicKObject(this, p_key, p_timeTree, p_clazz);
+            default : return new org.kevoree.modeling.api.reflexive.DynamicKObject(this, p_key, p_timeTree, p_clazz);
         }
     }
 
@@ -29,8 +29,8 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
 #end
 
     @Override
-    public ${context.metaModelPackage}.${context.metaModelName}Dimension dimension() {
-        return (${context.metaModelPackage}.${context.metaModelName}Dimension) super.dimension();
+    public ${context.metaModelPackage}.${context.metaModelName}Universe universe() {
+        return (${context.metaModelPackage}.${context.metaModelName}Universe) super.universe();
     }
 
 }
