--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
@@ -18,10 +18,12 @@ public interface ${classDeclaration.name} extends org.kevoree.modeling.api.KObje
 #if($rel.single)
     public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
     public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<$rel.getType().fqn> p_obj);
+    public org.kevoree.modeling.api.KTask<${rel.getType().fqn}> taskGet${context.generationContext.helper.toCamelCase($rel.getName())}();
 #{else}
     public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
     public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn p_obj);
-    public void each${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<${rel.getType().fqn}[]> p_callback);
+    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<${rel.getType().fqn}[]> p_callback);
+    public org.kevoree.modeling.api.KTask<${rel.getType().fqn}[]> taskGet${context.generationContext.helper.toCamelCase($rel.getName())}();
     public int sizeOf${context.generationContext.helper.toCamelCase($rel.getName())}();
 #end
 #end
