--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.css
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.css
@@ -3,7 +3,7 @@ button {
     border: none;
     border-radius: 2px;
     color: white;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 0.8em;
     margin: 0 0 1em 0;
     padding: 0.5em 0.7em 0.6em 0.7em;
@@ -12,28 +12,47 @@ button {
 button:active {
     background-color: #cf402f;
 }
+
 button:hover {
     background-color: #cf402f;
 }
+
 button[disabled] {
     color: #ccc;
 }
+
 button[disabled]:hover {
     background-color: #d84a38;
 }
-
-h2 {
-    color: #444;
-    font-size: 1em;
-    font-weight: 500;
-    line-height: 1.2em;
-    margin: 0 0 0.8em 0;
+div#buttons {
+    margin: 0 0 1em 0;
 }
-
-p {
-    color: #444;
+div#send {
+    margin: 0 20px 1em 0;
+}
+div#sendReceive {
+    border-bottom: 1px solid #eee;
+    margin: 0;
+    padding: 0 0 10px 0;
+}
+div#sendReceive > div {
+    display: inline-block;
+    width: calc(50% - 20px);
+}
+form {
+    margin: 0 0 1em 0;
+    white-space: nowrap;
+}
+form span {
     font-weight: 300;
-    line-height: 1.6em;
+    margin: 0 1em 0 0;
+    white-space: normal;
 }
-
-
+textarea {
+    color: #444;
+    font-size: 0.9em;
+    font-weight: 300;
+    height: 7.0em;
+    padding: 5px;
+    width: calc(100% - 10px);
+}
